Continual fixes of proportions and alignments
Made period-time table wider to accomodate for 4-digit start and end times

--- a/web/src/app/listing/component.scss
+++ b/web/src/app/listing/component.scss
@@ -76,7 +76,7 @@
 
 .padded {
   display: inline-block;
-  width: 63px;
+  width: 70px;
   text-align: center;
   border-bottom: solid 1px #efefef;
 }
@@ -84,16 +84,16 @@
 .vertical-separators {
   display: block;
   background: #fbfbfb;
-  width: 63px;
+  width: 70px;
   border-left: solid 1px #fbfbfb;
   top: 1.2em;
   bottom: 0.0em;
 }
 .thurs {
-  right: 6.2em;
+  right: 6.65em;
 }
 .tues {
-  right: 14.05em;
+  right: 15.36em;
 }
 
 i {
